CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(RoadFighter)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")

# Game logic library
ADD_SUBDIRECTORY(gll)

# SFML graphical implementation
ADD_SUBDIRECTORY(SFMLgame)